opti nav Bloc0, file name

--- a/style.css
+++ b/style.css
@@ -299,6 +299,8 @@ a:hover {
     font-weight: normal;
     font-weight: 600;
     line-height: 44px;
+    font-family: 'Yeon Sung', cursive;
+
 }
 
 .navbar-brand img {
