--- a/style.css
+++ b/style.css
@@ -12,7 +12,11 @@ button {
     transition: all .3s ease-in-out;
     outline: none!important;
 }
-
+ul li a {
+    font-size: 2rem;
+}ul li a:hover{
+    font-size: 2.5rem;
+}
 a:hover {
     text-decoration: none;
     cursor: pointer;
@@ -284,7 +288,7 @@ a:hover {
 }
 
 #bloc-1-hero h1 {
-    font-size: 32px;
+    font-size: 40px;
 }
 
 .navbar {
@@ -300,7 +304,9 @@ a:hover {
     font-weight: 600;
     line-height: 44px;
     font-family: 'Yeon Sung', cursive;
-
+}
+.navbar-brand:hover {
+    opacity: 0.6;
 }
 
 .navbar-brand img {
@@ -652,7 +658,7 @@ label,
 .btn,
 a {
     font-family: "helvetica";
-    font-weight: 400;
+    font-weight: 600;
     color: #575757!important;
 }
 
@@ -777,17 +783,20 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #FDD835!important;
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
-    color: #FFFFFF!important;
+    background: #FDD839;
+    color: #4E342E!important;
+    font-size: 2rem;
 }
 
 .btn-atomic-tangerine:hover {
-    background: #c27956!important;
-    color: #FFFFFF!important;
+    background: #FDD839!important;
+    color: #4E342E!important;
+    opacity: 0.7;
+
 }
 
 .ltc-white {
@@ -1034,6 +1043,9 @@ h4 {
     .bloc {
         padding-left: 0;
         padding-right: 0;
+    }
+    .navbar-brand {
+        font-size: 2.1rem;
     }
 }
 
