optimisation bloc-2-services

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1857,10 +1857,9 @@ abbr[title] {
 }
 
 blockquote {
-    padding: 10px 20px;
-    margin: 0 0 20px;
     font-size: 17.5px;
-    border-left: 5px solid #eee
+    margin: 0.2rem;
+
 }
 
 blockquote ol:last-child,
