--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ button {
 ul li a {
     font-size: 2rem;
 }ul li a:hover{
-    font-size: 2.5rem;
+    opacity: 0.6;
 }
 a:hover {
     text-decoration: none;
@@ -662,6 +662,11 @@ a {
     color: #575757!important;
 }
 
+h2 {
+    color: #575757;
+    font-weight: normal;
+}
+
 .container {
     max-width: 1000px;
 }
@@ -684,8 +689,13 @@ a {
     margin: auto auto auto auto;
 }
 
+#bloc-2-services p{
+    line-height: 1.6;
+    margin-top: 0;
+}
 p {
-    font-size: 11px;
+    font-size: 16px;
+    font-weight: normal;
 }
 
 .tight-width-whitespace {
@@ -712,16 +722,22 @@ p {
     margin: auto auto auto auto;
 }
 
+blockquote {
+    font-size: 20px;
+    color: #575757;
+    font-style: italic;
+}
+
 h2 {
     font-size: 22px;
     line-height: 1.4em;
 }
 
 h3 {
-    font-size: 15px;
+    font-size: 18px;
     text-transform: uppercase;
     font-weight: 700;
-    color: #333333!important;
+    color: #575757!important;
 }
 
 .med-width-whitespace {
