--- a/style.css
+++ b/style.css
@@ -268,6 +268,7 @@ a:hover {
     border-color: rgba(0, 0, 0, .3);
 }
 
+
 .voffset {
     margin-top: 30px;
 }
@@ -529,6 +530,22 @@ button {
     transition: all .3s ease-in-out;
 }
 
+@media (max-width:525px) {
+
+    #bloc-8 p{
+        font-size:15px;
+    }
+    .social {
+        width: 300px;
+    }
+
+    .scrollToTop {
+        bottom: 5px;
+        right: 5px;
+    }
+
+
+}
 .scrollToTop span {
     margin-top: 6px;
 }
@@ -722,7 +739,7 @@ p {
 
 .social {
     max-width: 400px;
-    margin: auto auto auto auto;
+    margin: auto;
 }
 
 blockquote {
@@ -808,7 +825,7 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #4E342E;
 }
 
 .tc-white {
@@ -816,15 +833,15 @@ h4 {
 }
 
 .btn-atomic-tangerine {
-    background: #FDD839;
-    color: #4E342E!important;
+    background: #4E342E!important;
+    color: #FDD839!important;
     font-size: 2rem;
 }
 
 .btn-atomic-tangerine:hover {
-    background: #FDD839!important;
-    color: #4E342E!important;
-    opacity: 0.7;
+    background: #4E342E!important;
+    color: #FDD839!important;
+    opacity: 0.6;
 
 }
 
@@ -878,6 +895,9 @@ h4 {
         padding-right: 0;
     }
 }
+
+
+
 
 @media (max-width: 992px) and (min-width: 768px) {
     .navbar .nav {
@@ -1075,6 +1095,8 @@ h4 {
         font-size: 15px;
     }
 
+ 
+
 
 }
 
@@ -1085,6 +1107,17 @@ h4 {
     }
     .navbar-brand {
         font-size: 2.1rem;
+    }
+    #bloc-8 p{
+        font-size:13px;
+    }
+    .social {
+        width: 254px;
+    }
+
+    .scrollToTop {
+        bottom: 5px;
+        right: 5px;
     }
 }
 
