--- a/style.css
+++ b/style.css
@@ -717,11 +717,41 @@ p {
     line-height: 1.6;
     font-weight: normal;
 }
+#bloc-6 p {
+    color: #FFF!important;
+}
 
+.contact {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 45px;
+    text-align: center;
+}
+
+.lk {
+    display: flex;
+    flex-direction: column;
+    line-height:3;
+}
+
+.lk  a:hover {
+    color: #FDD835!important;
+
+}
+select {
+}
+.horaire {
+    color: #575757!important;
+    font-weight: 600;
+    margin-top: 15px;
+}
 .tight-width-whitespace {
     max-width: 600px;
-    margin: auto auto auto auto;
+    margin: auto;
 }
+
 
 .h1 {
     font-size: 20px;
